--- a/package.json
+++ b/package.json
@@ -9,17 +9,28 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^2.0.68",
+    "@ai-sdk/react": "^2.0.95",
     "@pinecone-database/pinecone": "^6.1.3",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.4.0",
     "@sanity/icons": "^3.7.4",
     "@sanity/image-url": "^1.2.0",
     "@sanity/vision": "^4.16.0",
+    "ai": "^5.0.95",
+    "clsx": "^2.1.1",
+    "dotenv": "^17.2.3",
+    "lucide-react": "^0.554.0",
     "next": "16.0.3",
     "next-sanity": "^11.6.7",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-tilt": "^1.0.2",
     "recharts": "^3.4.1",
     "sanity": "^4.16.0",
     "styled-components": "^6.1.19",
+    "tailwind-merge": "^3.4.0",
+    "three": "^0.181.2",
     "yahoo-finance2": "^3.10.2"
   },
   "devDependencies": {
