--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "index-data": "tsx scripts/index-sanity-data.ts"
   },
   "dependencies": {
     "@ai-sdk/openai": "^2.0.68",
@@ -19,7 +23,6 @@
     "@sanity/vision": "^4.16.0",
     "ai": "^5.0.95",
     "clsx": "^2.1.1",
-    "dotenv": "^17.2.3",
     "lucide-react": "^0.554.0",
     "next": "16.0.3",
     "next-sanity": "^11.6.7",
@@ -34,11 +37,19 @@
     "yahoo-finance2": "^3.10.2"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.1.5",
+    "@testing-library/react": "^14.1.2",
+    "@testing-library/user-event": "^14.5.1",
+    "@types/jest": "^29.5.11",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "dotenv": "^17.2.3",
     "eslint": "^9",
     "eslint-config-next": "16.0.3",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "tsx": "^4.7.0",
     "typescript": "^5"
   }
 }
