--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "recharts": "^3.4.1",
+    "resend": "^6.5.0",
     "sanity": "^4.16.0",
     "styled-components": "^6.1.19",
     "tailwind-merge": "^3.4.0",
