--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@sanity/icons": "^3.7.4",
     "@sanity/image-url": "^1.2.0",
     "@sanity/vision": "^4.16.0",
+    "@vercel/speed-insights": "^1.2.0",
     "ai": "^5.0.95",
     "clsx": "^2.1.1",
     "lucide-react": "^0.554.0",
