feat: Add ELI5 Generator and Stoic Mirror labs with their respective APIs, UI, tests, and supporting styling configurations.

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@vercel/speed-insights": "^1.2.0",
     "ai": "^5.0.95",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.24",
     "lucide-react": "^0.554.0",
     "next": "16.0.3",
     "next-sanity": "^11.6.7",
@@ -38,6 +39,7 @@
     "yahoo-finance2": "^3.10.2"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.17",
     "@testing-library/jest-dom": "^6.1.5",
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.1",
@@ -45,11 +47,14 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.22",
     "dotenv": "^17.2.3",
     "eslint": "^9",
     "eslint-config-next": "16.0.3",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.17",
     "tsx": "^4.7.0",
     "typescript": "^5"
   }
