fix: resolve Vercel deployment error and add AI Lab link
Changes:
1. Fixed vercel.json schema validation error
   - Removed 'regions' property from edge runtime config
   - Edge runtime doesn't support regions configuration
   - Added explicit 'export const runtime = edge' in route.ts

2. Added AI Lab external link to Labs dropdown
   - New dropdown item with 🤖 emoji
   - Links to https://ai-lab-green.vercel.app/
   - Opens in new tab with proper security attributes
   - Positioned between FOMO Meter and Stoic Mirror

3. Updated test coverage
   - Modified Navbar tests to include AI Lab link
   - Verified external link attributes (target, rel)
   - All 21 tests passing ✅

This fixes the Vercel Pro deployment error and provides easy access to the AI Lab.

--- a/vercel.json
+++ b/vercel.json
@@ -2,16 +2,7 @@
   "functions": {
     "app/api/chat/route.ts": {
       "maxDuration": 60,
-      "memory": 1024,
-      "regions": [
-        "hkg1",
-        "sfo1",
-        "iad1",
-        "dub1",
-        "sin1",
-        "syd1"
-      ],
-      "runtime": "edge"
+      "memory": 1024
     }
   },
   "headers": [
